--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/drawer">
+                                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        android:id="@+id/drawer"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toobar" />
+            layout="@layout/toobar"/>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -33,14 +33,15 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <TextView
                         style="@style/TextH2"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.8"
-                        android:text="@string/general_nowplaying" />
+                        android:text="@string/general_nowplaying"/>
 
                     <TextView
                         android:id="@+id/textview_morenowplaying"
@@ -53,27 +54,28 @@
                         android:drawableRight="@drawable/next"
                         android:gravity="end|center_vertical"
                         android:onClick="moreNowPlayingMovies"
-                        android:text="@string/general_more" />
+                        android:text="@string/general_more"/>
 
                 </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/poster_height">
+                    android:layout_height="@dimen/poster_height"
+                    android:visibility="gone">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerview_nowplaying"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="visible" />
+                        android:visibility="visible"/>
 
                     <include
                         android:id="@+id/linearlayout_nowplaying_anyfounded"
-                        layout="@layout/anyfounded" />
+                        layout="@layout/anyfounded"/>
 
                     <include
                         android:id="@+id/linearlayout_nowplaying_loadfailed"
-                        layout="@layout/failedtoload" />
+                        layout="@layout/failedtoload"/>
 
 
                     <ProgressBar
@@ -83,7 +85,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:indeterminate="true"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
 
                 </RelativeLayout>
 
@@ -96,14 +98,15 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <TextView
                         style="@style/TextH2"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.8"
-                        android:text="@string/general_upcoming" />
+                        android:text="@string/general_upcoming"/>
 
                     <TextView
                         android:id="@+id/textview_moreupcoming"
@@ -116,7 +119,7 @@
                         android:drawableRight="@drawable/next"
                         android:gravity="end|center_vertical"
                         android:onClick="moreUpcomingMovies"
-                        android:text="@string/general_more" />
+                        android:text="@string/general_more"/>
 
                 </LinearLayout>
 
@@ -124,20 +127,21 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/poster_height"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:visibility="gone">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerview_upcoming"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
 
                     <include
                         android:id="@+id/linearlayout_upcoming_anyfounded"
-                        layout="@layout/anyfounded" />
+                        layout="@layout/anyfounded"/>
 
                     <include
                         android:id="@+id/linearlayout_upcoming_loadfailed"
-                        layout="@layout/failedtoload" />
+                        layout="@layout/failedtoload"/>
 
                     <ProgressBar
                         android:id="@+id/progressbar_upcoming"
@@ -146,7 +150,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:indeterminate="true"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
 
                 </RelativeLayout>
 
@@ -166,7 +170,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.8"
-                        android:text="@string/general_toprated" />
+                        android:text="@string/general_toprated"/>
 
                     <TextView
                         android:id="@+id/textview_moretoprated"
@@ -179,7 +183,7 @@
                         android:drawableRight="@drawable/next"
                         android:gravity="end|center_vertical"
                         android:onClick="moreTopRatedMovies"
-                        android:text="@string/general_more" />
+                        android:text="@string/general_more"/>
 
                 </LinearLayout>
 
@@ -191,15 +195,15 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerview_toprated"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
 
                     <include
                         android:id="@+id/linearlayout_toprated_anyfounded"
-                        layout="@layout/anyfounded" />
+                        layout="@layout/anyfounded"/>
 
                     <include
                         android:id="@+id/linearlayout_toprated_loadfailed"
-                        layout="@layout/failedtoload" />
+                        layout="@layout/failedtoload"/>
 
                     <ProgressBar
                         android:id="@+id/progressbar_toprated"
@@ -208,7 +212,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:indeterminate="true"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
 
                 </RelativeLayout>
 
@@ -228,7 +232,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.8"
-                        android:text="@string/general_popular" />
+                        android:text="@string/general_popular"/>
 
                     <TextView
                         android:id="@+id/textview_morepopular"
@@ -241,7 +245,7 @@
                         android:drawableRight="@drawable/next"
                         android:gravity="end|center_vertical"
                         android:onClick="morePopularMovies"
-                        android:text="@string/general_more" />
+                        android:text="@string/general_more"/>
 
                 </LinearLayout>
 
@@ -253,15 +257,15 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerview_popular"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
 
                     <include
                         android:id="@+id/linearlayout_popular_anyfounded"
-                        layout="@layout/anyfounded" />
+                        layout="@layout/anyfounded"/>
 
                     <include
                         android:id="@+id/linearlayout_popular_loadfailed"
-                        layout="@layout/failedtoload" />
+                        layout="@layout/failedtoload"/>
 
                     <ProgressBar
                         android:id="@+id/progressbar_popular"
@@ -270,7 +274,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:indeterminate="true"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
 
                 </RelativeLayout>
 
@@ -282,14 +286,14 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
-        android:layout_height="match_parent"
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/white"
-        app:itemBackground="@drawable/selector_row_accent"
-        app:itemTextColor="@color/gray_dark"
-        app:itemIconTint="@color/gray_dark"
         app:headerLayout="@layout/navigationview_header"
-        app:menu="@menu/drawer" />
+        app:itemBackground="@drawable/selector_row_accent"
+        app:itemIconTint="@color/gray_dark"
+        app:itemTextColor="@color/gray_dark"
+        app:menu="@menu/drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
