--- a/app/src/main/res/layout/navigationview_header.xml
+++ b/app/src/main/res/layout/navigationview_header.xml
@@ -19,7 +19,7 @@
         android:drawableLeft="@drawable/google"
         android:drawablePadding="10dp"
         android:drawableStart="@drawable/google"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <LinearLayout
         android:id="@+id/linearlayout_user"
