--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#2196F3</color>
-    <color name="primary_dark">#1976D2</color>
-    <color name="primary_dark_alpha">#9a1976d2</color>
+    <color name="primary">#f36421</color>
+    <color name="primary_dark">#9f4805</color>
+    <color name="primary_dark_alpha">#9a8d3b0c</color>
     <color name="primary_light">#BBDEFB</color>
     <color name="primary_light_alpha">#CCBBDEFB</color>
-    <color name="accent">#00a992</color>
-    <color name="accent_alpha">#CC00a992</color>
+    <color name="accent">#6e11e7</color>
+    <color name="accent_alpha">#cc480e9d</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
