--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -98,8 +98,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
+                    android:orientation="horizontal">
 
                     <TextView
                         style="@style/TextH2"
@@ -127,8 +126,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/poster_height"
-                    android:gravity="center"
-                    android:visibility="gone">
+                    android:gravity="center">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerview_upcoming"
