refactoring (del hardcode, imports, etc)

--- a/app/src/main/res/layout-sw600dp-land/activity_movieprofile.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_movieprofile.xml
@@ -41,7 +41,7 @@
                     android:padding="10dp"
                     android:background="@color/white"
                     android:layout_marginTop="1dp"
-                    android:text="Reviews"/>
+                    android:text="@string/movieprofileactivity_reviews"/>
 
                 <FrameLayout
                     android:id="@+id/fragment_review"
