--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="primary">#f36421</color>
     <color name="primary_dark">#9f4805</color>
     <color name="primary_dark_alpha">#9a8d3b0c</color>
     <color name="primary_light">#BBDEFB</color>
-    <color name="primary_light_alpha">#CCBBDEFB</color>
+    <color name="primary_light_alpha" tools:keep="@color/primary_light_alpha">#CCBBDEFB</color>
     <color name="accent">#6e11e7</color>
     <color name="accent_alpha">#cc480e9d</color>
-    <color name="secondary_text">#727272</color>
-    <color name="icons">#FFFFFF</color>
+    <color name="secondary_text" tools:keep="@color/secondary_text">#727272</color>
+    <color name="icons" tools:keep="@color/icons">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
+    <color name="divider" tools:keep="@color/divider">#B6B6B6</color>
     <color name="red">#f44336</color>
     <color name="gray_dark">#212121</color>
     <color name="gray">#727272</color>
